--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,3 +18,14 @@ jobs:
 
       - name: Build
         run: scripts/buildprod.sh
+
+      - id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v3
+
+      - name: Upload image
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/prismatic-iris-472616-g8/notely-ar-repo/notely:latest .
