--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,6 +7,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -15,6 +18,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.25.1"
+
+      - name: Set up Goose
+        uses: actions/mscno/setup-goose@v1
 
       - name: Build
         run: scripts/buildprod.sh
@@ -29,6 +35,9 @@ jobs:
 
       - name: Upload image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/prismatic-iris-472616-g8/notely-ar-repo/notely:latest .
+
+      - name: Migrate up database
+        run: goose up
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/prismatic-iris-472616-g8/notely-ar-repo/notely:latest --region us-central1  --allow-unauthenticated --project prismatic-iris-472616-g8 --max-instances=4
