--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,7 @@ jobs:
           go-version: "1.25.1"
 
       - name: Set up Goose
-        uses: actions/mscno/setup-goose@v1
+        uses: mscno/setup-goose@v1
 
       - name: Build
         run: scripts/buildprod.sh
