--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,7 +37,7 @@ jobs:
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/prismatic-iris-472616-g8/notely-ar-repo/notely:latest .
 
       - name: Migrate up database
-        run: goose turso $DATABASE_URL up
+        run: scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/prismatic-iris-472616-g8/notely-ar-repo/notely:latest --region us-central1  --allow-unauthenticated --project prismatic-iris-472616-g8 --max-instances=4
